# game05

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: cmake-multi-platform.yml
resources/: game.cfg  game.yml
src/: main.cpp
src/tr/: resource.cpp  resource.h  tr_data_format.h  tr_framebuffer.cpp  tr_framebuffer.h  tr_scope.cpp  tr_scope.h  tr_shader.cpp  tr_shader.h  tr_texture.cpp  tr_texture.h  tr_vertex.cpp  tr_vertex.h  tr_window.cpp  tr_window.h
